--- a/app/styles/base/_variables.scss
+++ b/app/styles/base/_variables.scss
@@ -1,6 +1,12 @@
-$color: red;
 
-.center{
-  text-align: center;
-  color: $color;
+
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html,body{
+    text-align: center;
+    letter-spacing: 1px;
 }
