--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,2 +1,3 @@
 @import "base/variables";
-@import "components/QuoteDisplay"
+@import "components/QuoteDisplay";
+@import "components/QuoteButtons";
