--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,3 +1,4 @@
 @import "base/variables";
 @import "components/QuoteDisplay";
 @import "components/QuoteButtons";
+@import url('https://fonts.googleapis.com/css?family=Tillana');
