Added super basic support for flashing messages. Must stress, super simple. Will probably not even be improved, probably just scrapped. I'm tired.

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -2,4 +2,5 @@
 @import "components/QuoteDisplay";
 @import "components/QuoteButtons";
 @import "components/addQuoteForm";
+@import "components/Flash";
 @import url('https://fonts.googleapis.com/css?family=Tillana');
