--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,4 +1,5 @@
 @import "base/variables";
+@import "base/animations";
 @import "components/QuoteDisplay";
 @import "components/QuoteButtons";
 @import "components/addQuoteForm";
