Added buttons that will toggle between the different views

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -4,4 +4,6 @@
 @import "components/QuoteButtons";
 @import "components/addQuoteForm";
 @import "components/Flash";
+@import "components/ToggleButtons";
+@import "components/Button";
 @import url('https://fonts.googleapis.com/css?family=Tillana');
