--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,7 +1,7 @@
+@import "layout/home.scss";
 @import "base/variables";
 @import "base/animations";
 @import "components/QuoteDisplay";
-@import "components/QuoteButtons";
 @import "components/addQuoteForm";
 @import "components/Flash";
 @import "components/ToggleButtons";
