--- a/app/styles/components/_ToggleButtons.scss
+++ b/app/styles/components/_ToggleButtons.scss
@@ -5,7 +5,7 @@
   
 
   & div {
-    width: 33.4%;
+    width: 33.33%;
   }
 
   & .button {
@@ -17,5 +17,12 @@
     color: white;
     font-size: 14px;
     cursor: pointer;
+  }
+}
+
+/* Small Devices, Tablets */
+@media only screen and (max-width : 768px) {
+  .toggleButtons {
+    width: 90%;
   }
 }
