--- a/app/styles/components/_ToggleButtons.scss
+++ b/app/styles/components/_ToggleButtons.scss
@@ -1,6 +1,6 @@
 .toggleButtons {
   display: flex;
-  margin: 0 auto;
+  margin: 0 auto  15px auto;
   width: 66.66%;
   
 
@@ -17,6 +17,11 @@
     color: white;
     font-size: 14px;
     cursor: pointer;
+
+    &--active {
+      background-color: #1da1f2;
+      border: 1px solid #1da1f2;
+    }
   }
 }
 
