--- a/app/styles/layout/_home.scss
+++ b/app/styles/layout/_home.scss
@@ -5,7 +5,7 @@
 }
 
 html,body{
-  font-size: 18px;
+  font-size: 10px;
   font-family: 'Tillana', cursive;
   text-align: center;
   letter-spacing: 1px;
@@ -28,6 +28,11 @@ h1{
   margin: 0 auto;
 }
 
-blockquote,blockquote p{
-  color: black;
+
+
+.row {
+  width: 940px;
+  max-width: 100%;
+  min-width: 768px;
+  margin: 0 auto;
 }
