--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -6,4 +6,5 @@
 @import "components/Flash";
 @import "components/ToggleButtons";
 @import "components/Button";
+@import "components/Quote";
 @import url('https://fonts.googleapis.com/css?family=Tillana');
