--- a/app/styles/components/_ToggleButtons.scss
+++ b/app/styles/components/_ToggleButtons.scss
@@ -1,6 +1,6 @@
 .toggleButtons {
   display: flex;
-  //margin: 0 auto  15px auto;
+  margin: 15px 0;
 
   & .button {
     padding: 10px 20px 11px;
